Correct few misalignments in documentation.

--- a/src/documentation/scss/_base.scss
+++ b/src/documentation/scss/_base.scss
@@ -2,11 +2,16 @@ html {height: 100%;}
 
 body {height: 100%;}
 
+.main-content {overflow: hidden;}
+
 a {color: $links;}
 
 ul {margin-left: 4 * $base-increment + 2px;}
 
 p {margin-bottom: 2 * $base-increment;}
+
+.ovv {overflow: visible;}
+.ovh {overflow: hidden;}
 
 .ssh-pre {
   margin: 1em 0;
